--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "mongoose": "^8.8.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@eslint/js": "^9.17.0",
+    "@types/express": "^4.17.1",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
+    "nodemon": "^3.1.7",
+    "typescript": "^5.7.2"
   }
 }
