--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && jest --detectOpenHandles --forceExit",
+    "start": "tsc && node dist/app.js",
+    "lint": "eslint . --ext .ts",
+    "devstart": "nodemon ./src/app.ts"
   },
   "author": "",
   "license": "ISC",
@@ -19,10 +20,15 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/express": "^4.17.1",
+    "@types/jest": "^29.5.14",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.3",
     "globals": "^15.14.0",
     "nodemon": "^3.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
 }
